--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.4",
@@ -33,8 +34,8 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.9",
+    "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
-    "zepto": "^1.2.0",
-    "zepto-webpack": "^1.2.1"
+    "jquery": "^3.3.1"
   }
 }
